# school-app

./: .gitignore  Dockerfile  constants.py  pyproject.toml  run.sh
.github/: python-app.yml
app/: app.py  train.py  utils.py
app/data/: student_data_reduced.csv
