[tool.poetry]
name = "ekinox-test"
version = "0.1.0"
description = ""
authors = ["Raphael Vienne <raphael.vienne@live.fr>"]
readme = "README.md"
packages = [{include = "ekinox_test", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.10.1"
ruff = "^0.1.3"
pytest = "^7.4.3"
pre-commit = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
